# pytorch-ml-remote-template

./: README.md  pyproject.toml
project_name/: other_module.py
